# gsforge

./: .gitignore  README.md  cli.py  pixi.toml  pyproject.toml
src/: __init__.py  ingest.py  project.py  sfm.py  utils.py
src/gsforge/: __init__.py  cli.py  ingest.py  project.py  sfm.py  train.py  utils.py
tests/: __init__.py  test_ingest.py  test_sfm.py
