[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gsforge"
version = "0.1.0"
description = "CLI-first tool for virtual production 3D Gaussian Splatting workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "gsforge contributors" }]
keywords = ["gaussian-splatting", "3dgs", "virtual-production", "nerf", "colmap", "glomap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

dependencies = [
    # Core CLI framework — [all] pulls in rich + shellingham for pretty output
    "typer[all]>=0.12",

    # Beautiful terminal output — tables, progress, syntax highlighting
    "rich>=13",

    # Progress bars for long-running SfM / training steps
    "tqdm>=4",

    # FFmpeg Python bindings for video frame extraction
    "ffmpeg-python>=0.2",

    # Image utilities — used for frame inspection and potential mask handling
    "Pillow>=10",

    # OpenCV — future mask handling, frame quality filtering
    "opencv-python>=4.9",

    # gsplat — the core 3DGS training library
    # NOTE: gsplat requires CUDA. Install torch FIRST with the correct CUDA index URL:
    #   pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
    # Then install gsplat:
    #   pip install gsplat
    # We list it here so it appears in metadata, but you may need to install manually.
    "gsplat>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
# This registers the `gsforge` command on the system PATH after `pip install -e .`
gsforge = "gsforge.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/gsforge"
Repository = "https://github.com/your-org/gsforge"
Issues = "https://github.com/your-org/gsforge/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

# ---------------------------------------------------------------------------
# Ruff — fast linter / formatter (replaces flake8 + isort + black)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
