[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gsforge"
version = "0.1.0"
description = "CLI-first tool for virtual production 3D Gaussian Splatting workflows"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "MIT" }
authors = [{ name = "gsforge contributors" }]

[project.scripts]
gsforge = "gsforge.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"